fix: fix typo and grammar checks

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -12,18 +12,18 @@ description: Learn how to share code by creating a package in monorepo
 :::
 
 ## Overview
-We often need to share code between multiple apps.
+We often need to share code between multiple packages.
 Doing so in a large project can be a chore. Fortunately every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization).
-In this tutorial you will learn how to organize and share code between multiple packages in a monorepo.
+In this tutorial, you will learn how to organize and share code between multiple packages in a monorepo.
 Let's get started.
 
 ## What We'll Build
-In this tutorial, we're using `React` code as the example code that we need to share between multiple apps.
-But, you can create a package for `api` as well using similar principles.
+In this tutorial, we'll be building a frontend package written in react and see how we can share it between multiple packages.
+But, you can create a package for backend code as well using similar principles.
 
-Here is the file structure of the example package:
+Here is the file structure of an example package:
 ```
-// Some files are omitted for sake of brevity.
+// Some files are omitted for the sake of brevity.
 
 ├── api
 ├── apps
@@ -43,23 +43,20 @@ Here is the file structure of the example package:
 │       └── tsconfig.json
 └── yarn.lock
 ```
-:::note
-The content of the `src` folder is not relevant here.
-All that we need to know is that it is a `React` project and the configuration file such as `.babelrc.js` is written accordingly.
-:::
 
 ## Prerequisites
 
 1. **A Webiny Project**
 
 This tutorial assumes you have already created a new Webiny project to work on.
-We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which show you how to do it.
+We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which shows you how to do it.
 
 ## Create a Package
-In this step, we create a new React project and add it to the workspaces list.
+In this step, we create a new React package and add it to the workspaces list.
 
 :::info
-Learn more about [workspaces](https://yarnpkg.com/features/workspaces)
+The Yarn workspaces aim to make working with monorepos easy.
+Learn more about [workspaces](https://yarnpkg.com/features/workspaces) here.
 :::
 
 One question you may ask is: **Where is this workspaces list is located?**
@@ -87,15 +84,15 @@ The list of all workspaces can be found in the package.json file, located in you
 (...)
 ```
 
-As you can see from above-mentioned example, a package can be at root level for example, `my-package` or grouped in a folder for example `packages`.
-In this tutorial we use the later.
+As you can see from the above-mentioned example, a package can be at the root level for example, `my-package` or grouped in a folder for example `packages`.
+In this tutorial, we use the latter.
 
 Enough with the theory, let’s dig in.
 
 First, create a folder called `packages` where we add our custom package.
 
 :::info
-Packages are just regular NPM packages, or in other words, folders with its own package.json
+Packages are just regular NPM packages, or in other words, folders with their own package.json
 :::
 
 Let's create a folder called `greeting` inside `packages`. Now you need to create a `package.json` file in that folder.
@@ -128,10 +125,10 @@ Depending upon your inputs the generated `package.json` file's content may look 
 ```
 
 :::note
-The name property defined in the package's `package.json` will be used to later import it.   
+The name property defined in the package's `package.json` will be used to later import it.
 :::
 
-Next create a `src` folder inside `packages/greeting` and then add `index.tsx` file inside it with the following code:
+Next, create a `src` folder inside `packages/greeting` and then add the `index.tsx` file inside it with the following code:
 
 ```tsx title="packages/greeting/src/index.tsx"
 import React from "react";
@@ -144,13 +141,12 @@ export default WelcomeMessage;
 ```
 
 :::note
-Here we're creating a very simple component. But, you can write whatever logic you need for your project. 
+Here we're creating a very simple component. But, you can write whatever logic you need for your project.
 :::
 
-Now that we've have our desired code in place. We can move to the next step which is adding the required configuration files.
-Let's see.
+Now that we've our desired code in place. We can move to the next step which is adding the required configuration files.
 
-In order to build our package, we need to add the following configuration files:
+To build our package, we need to add the following configuration files:
 - `package.json`
 - `.babelrc.js`
 - `tsconfig.json`
@@ -236,7 +232,7 @@ After that, we add the following scripts inside the `package.json` file:
 }
 ```
 
-And finally, we add `publishConfig` which is a set of configuration values that is be used at publish-time.
+And finally, we add `publishConfig` which is a set of configuration values that are being used at publish-time.
 
  ```json title="packages/greeting/package.json"
 {
@@ -279,7 +275,7 @@ Now let's take a look at the `.babelrc.js` file which is a configuration file fo
 :::info
 Babel is a JavaScript compiler. We need it because:
 - we're writing the `React` code in `JSX` syntax which need to be converted in `JS`
-- we're also using latest JavaScript features and syntax which are not supported in all browsers therefore need to be converted
+- we're also using the latest JavaScript features and syntax which are not supported in all browsers, therefore, need to be converted
 :::
 
 In the `.babelrc.js` we just export the `.babel.react` configuration file which is defined in the project root.
@@ -322,24 +318,24 @@ It contains information that is commonly required to understand what the project
 
 ## Preparing the Package for Usage
 Now that we've created our package and added the required configuration files. It's time to use it.
-In order to do that we need to follow the following steps:
+To do that we need to follow the following steps:
 - build the package
 - link the package
 
 ### Build the Package
-In order to use the package we need to `build` it first.
+To use the package we need to `build` it first.
 
 **"And how do we do that?"** you may ask:
 
-Remember we added the `build` command under `scripts` key inside `package.json` file of the package.
-Now it's time we use it. We can simply `cd` into the package folder that is `packages/gretting` and run:
+Remember we added the `build` command under the `scripts` key inside the `package.json` file of the package.
+Now it's time we use it. We can simply `cd` into the package folder that is `packages/greeting` and run:
 
 ```
 yarn build
 ```
-And it will work just fine. But, as your project grow and you add more packages. It becomes a chore to run the same command across multiple packages.
+And it will work just fine. But, as your project grows and you add more packages. It becomes a chore to run the same command across multiple packages.
 
-Webiny CLI provides the workspaces run (or ws run for short) command that enables you to run a single command across multiple workspaces at once.
+Webiny CLI provides the workspaces run (or ws run for short) command that enables you to run single command across multiple workspaces at once.
 The common use case where this might be needed is local development, where you want to watch for code changes on multiple packages, and rebuild them accordingly.
 
 :::info
@@ -347,9 +343,9 @@ We recommend reading the [Working With Workspaces](http://docs.webiny.com/docs/h
 article to learn more about workspaces.
 :::
 
-We can use it for building the package and/or running a watch session while developing the code (so that the latest changes gets rebuild).
+We can use it for building the package and/or running a watch session while developing the code (so that the latest changes get rebuild).
 
-For example, in order to establish a watch session across multiple packages, located in a specific folder, you can run the following command:
+For example, to establish a watch session across multiple packages, located in a specific folder, you can run the following command:
 
 ```
 yarn webiny ws run watch --folder packages
@@ -361,7 +357,7 @@ yarn webiny ws run build --folder packages
 ```
 
 :::note
-The `ws run` command execute the command in question for every workspace present in the folder.
+The `ws run` command executes the command in question for every workspace present in the folder.
 In our case, `packages/greeting`.
 :::
 
@@ -389,5 +385,5 @@ Congratulations!! 🎉🥳
 You've successfully created a custom package in monorepo.
 Monorepo organization makes it possible to structure different logical pieces of your project as multiple packages.
 
-You can also checkout a similar code example in our [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
+You can also check out a similar code example in our [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
 If you have further questions, feel free to [ask](https://www.webiny.com/slack) for additional help.
