--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -49,6 +49,12 @@ The numbers we presented in our tests are not the maximum that Webiny can reach.
 
 If you require a greater scale, we recommend you reach out to us via [slack](https://www.webiny.com/slack) and we'll be happy to help you out.
 
+## Webiny vs others
+
+Webiny's numbers are not directly comparable to systems running on virtual machines or containers. Webiny's architecture is fault tolerant in almost all of it's parts out of the box. The only exception is Elasticsearch, which if you set in your config to be deployed into 3 AZs you'll make it highly available.
+
+Running on serverless services overall improves the reliability and security of your application and makes the infrastructure easier to maintain. So if you do plan to make comparisons, we recommend you take all appropriate aspects into account.
+
 ## Replicate the test
 
 All test files, reports from our run and instructions are available in this repository here: http://github.com/webiny/benchmark.
