fix: replace site with website in webiny app command

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -86,5 +86,5 @@ The following deploy commands deploy three different applications, all into the 
 ```
 yarn webiny app deploy api --env dev
 yarn webiny app deploy apps/admin --env dev
-yarn webiny app deploy apps/site --env dev
+yarn webiny app deploy apps/website --env dev
 ```
