--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -45,5 +45,5 @@ The following destroy commands destroy cloud infrastructure deployed for three p
 ```
 yarn webiny app destroy api --env dev
 yarn webiny app destroy apps/admin --env dev
-yarn webiny app destroy apps/site --env dev
+yarn webiny app destroy apps/website --env dev
 ```
