fix(tutorials): create application tutorial spelling

--- a/docs/tutorials/create-application.mdx
+++ b/docs/tutorials/create-application.mdx
@@ -1,7 +1,9 @@
 ---
 id: create-an-application
-title: Create an application
-sidebar_label: Create an application
+title: Create An Application
+sidebar_label: Create An Application
+keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
+description: Quickly create and deploy API and Admin area applications.
 ---
 
 :::tip WHAT YOU’LL LEARN
@@ -15,49 +17,50 @@ We will go through the process of generating the code for both UI and API packag
 
 The command you will need is `yarn webiny scaffold`. Of course, you run it from the root of your project.
 
-For you to be able to import the package into the api or apps code, via its name, it must be linked to the `node_modules`.
+For you to be able to import the package into the API or Admin app it must be linked to the `node_modules`.
 It is done automatically by our [linkWorkspaces](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/scripts/linkWorkspaces.js) script which is called by `yarn postinstall`.
 
-Only thing you need to change in it, if you are generating packages somewhere other than packages directory, is the `whitelist` param - just add your package directory to the array.
+If you are generating packages in a directory that is not `packages`, you must add that directory in the `whitelist` array.
 
 In our examples we will use `CarManufacturer` as our reference.
 
-## API package scaffold
+## API Package Scaffold
 
-### Running the scaffold
-Run the scaffold command and go follow the questions. Here is the detailed explanation of the questions:
+### Running the Scaffold
+Run the scaffold command and follow the questions. Here is a detailed explanation of the questions:
 ##### 1. Enter the name of the initial data model
 Name of the API model. The GraphQL queries, mutations and responses will use this name in singular and plural form.
 
-Name value is also used to create both the defaults for the package location and the package name.
+The name value is used to create both the defaults for the package location and the package name.
 
-Initially created data model has 3 fields (`title`, `description` and `isNice`) to show you how to build your data model.
+The initial data model has 3 fields (`title`, `description` and `isNice`) to show you how to build your data model.
 
-Validation of the data model name allows only a-z and A-Z. You can name your model all lowercase or all uppercase, that is up to you - but try to keep it in pascal-case.
+Validation of the data model name allows only a-z and A-Z.
+You can name your model all lowercase or all uppercase. It is up to you - but try to keep it in pascal-case.
 
 ##### 2. Enter the package location
-Full location of the package - from the root of the project. A data model name given in previous question is used to create the default package location.
+A full location of the package from the root of the project. A data model name given in the previous question is used to create the default package location.
 
-By default, we think it is best to organize your packages in `packages` directory, but you can change that to what ever you want.
+By default, we think it is best to organize your packages in `packages` directory, but you can change that to whatever you want.
 
-Default value is `packages/car-manufacturers/api`. Notice that data model name `CarManufacturer` is in plural and kebab-cased.
+The default value is `packages/car-manufacturers/api`. Notice that the data model name `CarManufacturer` is in plural and kebab-cased.
 
 Validation of the package location checks only if the given directory already exists.
 
 ##### 3. Enter the package name
-The package name that you will reference to in the code. As in the location step, data model name is used to create the default package name.
+The package name that you reference to in the code. As in the location step, the data model name is used to create the default package name.
 
-Default value is `@car-manufacturers/api`.
+The default value is `@car-manufacturers/api`.
 
 Validation of the package name is done via the `validate-npm-package-name` package.
 
 
-### The code
+### The Code
 Generated code contains:
 1. `src/index.ts` with `GraphQLSchemaPlugin` plugin type which defines the GraphQL schema and resolvers.
-2. `src/configuration.ts` with configuration for DynamoDB table, Elasticsearch DynamoDB stream table and Elasticsearch index.
+2. `src/configuration.ts` with the configuration for DynamoDB table, Elasticsearch DynamoDB stream table and Elasticsearch index.
 3. `src/es.ts` with helpers to build the Elasticsearch query out of the GraphQL query arguments.
-4. `src/types.ts` with interfaces for resolvers, application context, arguments, etc...
+4. `src/types.ts` with interfaces for resolvers, application context, arguments.
 5. `__tests__/useGqlHandler.ts` with the setup of the test runners.
 6. `__tests__/graphql/carManufacturers.ts` with GraphQL queries and mutations to be run.
 7. `__tests__/crud.test.ts` with the tests for the resolvers.
@@ -67,13 +70,13 @@ If you want to use the Elasticsearch functionality that is provided with the gen
 
 ### Testing
 You can run tests locally with command `ELASTICSEARCH_PORT=9200 LOCAL_ELASTICSEARCH=true yarn test packages/car-manufacturers/api`.
-You need to have local Elasticsearch started for this to work and port can be something other than **9200**.
+You must have local Elasticsearch started for this to work. Port can be something other than **9200**.
 
 Generated tests cover CRUD operations and sorting by `createdOn` and `title` fields.
 
-### Using the generated code in your project
+### Using the Generated Code in Your Project
 In the main GraphQL file you need to import your package and include it in the existing handler.
-```ts title="api/code/graphql/src/index.ts"
+```typescript title="api/code/graphql/src/index.ts"
 // at the top of the file
 import carManufacturerPlugin from "@car-manufacturers/api";
 
@@ -86,16 +89,16 @@ Use the command to deploy the API:
 yarn webiny deploy api --env YOUR_ENVIRONMENT
 ```
 
-Now that you have functioning API, let's move onto the UI side.
+Now that you have a functioning API, let's move onto the UI side.
 
-## Admin area package scaffold
-### Running the scaffold
-Run the scaffold command and go follow the questions. The questions are as the ones in the API package scaffold, functionality behind them as well.
+## Admin Area Package Scaffold
+### Running the Scaffold
+Run the scaffold command and follow the questions. The questions are as the ones in the API package scaffold, functionality behind them as well.
 
-### The code
+### The Code
 Generated code contains:
 1. `src/views/graphql.ts` with GraphQL queries and mutations for the data model.
-2. `src/views/CarManufacturers.tsx` with a React component that renders both list view and the form.
+2. `src/views/CarManufacturers.tsx` with a React component that renders both the list view and the form.
 3. `src/views/CarManufacturersDataList.tsx` with a React component that lists existing data models via the GraphQL queries.
 4. `src/views/CarManufacturerForm.tsx` which utilizes our `@webiny/form` package to display and populate the form.
 5. `src/rotues.tsx` with `RoutePlugin` definition to add the route in the admin area.
@@ -103,9 +106,9 @@ Generated code contains:
 7. `src/types.ts` with interfaces for entry items and data list props.
 8. `src/index.ts` with exports of the plugins to be used in the admin app.
 
-### Using the generated code in your project
+### Using the Generated Code in Your Project
 In the main admin app file you need to import your package and include it in the plugin registration array.
-```ts title="apps/admin/code/src/plugins/index.ts"
+```typescript title="apps/admin/code/src/plugins/index.ts"
 // at the top of the file
 import carManufacturerPlugin from "@car-manufacturers/admin-app";
 
@@ -113,11 +116,11 @@ import carManufacturerPlugin from "@car-manufacturers/admin-app";
 carManufacturerPlugin()
 ```
 
-### Deploy the admin app
+### Deploy the Admin App
 Use the command to deploy the admin app:
 ```
 yarn webiny deploy apps/admin --env YOUR_ENVIRONMENT
 ```
 
-And now you have the functioning UI in the admin area to create, update, delete and list the CarManufacturers.
+And now you have the functional UI in the admin area to create, update, delete, and list the CarManufacturers.
 
