wip(tutorials): split into multiple articles

--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -1,9 +1,9 @@
 ---
-id: create-an-application
-title: Create An Application
-sidebar_label: Create An Application
-keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
-description: Quickly create and deploy API and Admin area applications.
+id: admin-area-package
+title: Admin Area Package
+sidebar_label: Admin Area Package
+keywords: ["webiny", "scaffold", "boilerplate", "admin"]
+description: Quickly create and deploy Admin area package.
 ---
 
 :::tip WHAT YOU’LL LEARN
