wip(tutorials): update api graphql

--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -111,9 +111,13 @@ GraphQL is accessible on that url with addition of `/graphql`, so it is `https:/
 
 To create new `CarManufacturer` entry, the mutation is:
 ```graphql
-mutation CreateCarManufacturerMutation($data: CarManufacturerCreateInput!) {
+mutation CreateCarManufacturerMutation {
 	carManufacturers {
-		createCarManufacturer(data: $data) {
+		createCarManufacturer(data: {
+			title: "Mercedes",
+			isNice: true,
+			description: "A nice car manufacturer"
+		}) {
 			data {
 				id
 				title
@@ -154,6 +158,11 @@ query ListCarManufacturerQuery {
 					displayName
 					type
 				}
+			}
+			meta {
+				cursor
+				hasMoreItems
+				totalCount
 			}
 			error {
 				message
