wip(tutorials): update api es docs

--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -81,11 +81,18 @@ Generated code contains:
 7. `__tests__/crud.test.ts` with the tests for the resolvers.
 
 ## Elasticsearch
-If you want to use the Elasticsearch functionality that is provided with the generated code you must run install mutation described in the information after the code was generated.
+In the generated code we provide some basic Elasticsearch functionality.
+Although the DynamoDB is the database the data is being stored to, it does not provide a lot of search capabilities so we introduced the Elasticsearch.
+
+If you do not want to use it you will need to modify the code a bit for it to work without the Elasticsearch.
+
+If you want to use the Elasticsearch functionality, that is provided with the generated code, you must run install mutation described in the information after the code was generated. This will create the Elasticsearch index for your data.
+
 
 ## Testing
-You can run tests locally with command `ELASTICSEARCH_PORT=9200 LOCAL_ELASTICSEARCH=true yarn test packages/car-manufacturers/api`.
-You must have local Elasticsearch started for this to work. Port can be something other than **9200**.
+You can run tests locally with command `ELASTICSEARCH_PORT=9200 LOCAL_ELASTICSEARCH=true yarn test packages/car-manufacturers/api` or `yarn test packages/car-manufacturers/api`, if you removed the Elasticsearch.
+
+If you are using the Elasticsearch, you must have local Elasticsearch started for this to work. Port can be something other than **9200**.
 
 Generated tests cover CRUD operations and sorting by `createdOn` and `title` fields.
 
