wip(tutorials): update api graphql docs

--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -92,6 +92,8 @@ If you want to use the Elasticsearch functionality, that is provided with the ge
 ## Testing
 You can run tests locally with command `ELASTICSEARCH_PORT=9200 LOCAL_ELASTICSEARCH=true yarn test packages/car-manufacturers/api` or `yarn test packages/car-manufacturers/api`, if you removed the Elasticsearch.
 
+Tests are Jest based and files must end in `.test.ts` to be run.
+
 If you are using the Elasticsearch, you must have local Elasticsearch started for this to work. Port can be something other than **9200**.
 
 Generated tests cover CRUD operations and sorting by `createdOn` and `title` fields.
@@ -180,6 +182,14 @@ query ListCarManufacturerQuery {
 	}
 }
 ```
+## Adding Additional Schema to the Code
+When you want to extend the GraphQL schema you should add it to the `typeDefs` property of the `GraphQLSchemaPlugin` in `packages/car-manufacturers/api/src/index.ts` file.
+
+## Adding Additional Resolvers to the Code
+When you add some additional schema, you also must add the resolver for it.
+You should add it to the `resolvers` property of the `GraphQLSchemaPlugin` in `packages/car-manufacturers/api/src/index.ts` file.
+
+Be aware that the resolver should be under the `CarManufacturerQuery` or `CarManufacturerMutation` properties, if you added schema into those.
 
 ## Building the Code
 When you make changes to the code, make sure you run `yarn webiny ws run build --folder=packages/car-manufacturers/api` to actually compile your code for the deployment.
